# factorials-cpp-gtest-travisci

./: .codeclimate.yml  .travis.yml  CMakeLists.txt  README.md  main.cpp
factorial/: CMakeLists.txt  CmakeLists.txt  factorial.cpp  factorial.h
factorial_tests/: CMakeLists.txt
factorial_tests/basic_tests/: CMakeLists.txt  basic_check.cpp  factorial_check.cpp
